@@ -15,6 +15,11 @@ svn trunk
   it'll clear soon, and optionally killing the process when there are
   too many lost/zombie threads.
 
+* Save host and scheme information during real HTTP proxy requests to
+  ``paste.httpserver``, into the keys
+  ``paste.httpserver.proxy.scheme`` and
+  ``paste.httpserver.proxy.host``
+
 * In ``paste.exceptions`` always call ``start_response``; may help
   problems when there is an exception in ``start_response`` itself.
 
